# m1-player

./: .gitignore  .gitmodules  CMakeLists.txt  M1-Player.jucer  README.md  VERSION  build_vlc.bat  build_vlc.ps1  build_vlc.sh  bundle_vlc_deps.bat  bundle_vlc_deps.sh  m1-player.jucer
Modules/: CMakeLists.txt
Modules/m1_objectdetection/: README.md  example_usage.cpp  m1_objectdetection.cpp  m1_objectdetection.h
Resources/: CMakeLists.txt  M1-Player-Info.plist  M1-Player.entitlements  send_osc_player.py
Source/: CMakeLists.txt  Config.h  FFMpegVCMediaObject.h  FFmpegVCMediaObject.cpp  FFmpegVCMediaObject.h  M1PannerSettings.h  M1PlayerMediaObject.h  Main.cpp  MainComponent.cpp  MainComponent.h  MediaPlayer.cpp  MediaPlayer.h  MeshGenerator.h  ObjectTracker.cpp  ObjectTracker.h  PlayerOSC.cpp  PlayerOSC.h  SphereMeshGenerator.h  TransportOSCServer.h  TypesForDataExchange.h  VLCSeekableMediaPlayer.cpp  VLCSeekableMediaPlayer.h  cmake_install.cmake
Source/UI/: M1Checkbox.h  M1DropdownButton.h  M1PlayerControlButton.h  M1PlayerControls.h  M1Slider.h  MainWidget.h  MarqueeSelection.h  RadioGroupWidget.h  VideoPlayerWidget.h
cmake/: fetchM1SDK.cmake
